--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = emulator_64bits
+default_envs = DCB_EMULATOR
 
 ; Shared options
 [env]
@@ -27,7 +27,7 @@ lib_deps =
 lib_archive = false
 
 
-[env:emulator_64bits]
+[env:DCB_EMULATOR]
 platform = native@^1.1.3
 extra_scripts = support/sdl2_build_extra.py
 build_flags =
