Updated path to ui files

--- a/platformio.ini
+++ b/platformio.ini
@@ -55,5 +55,5 @@ lib_deps =
   lv_drivers=https://github.com/lvgl/lv_drivers/archive/refs/tags/v8.2.0.zip
 build_src_filter =
   +<*>
-  +<../../ui/*>
+  +<../../asok-esp/lib/ui/*>
   +<../hal/sdl2>
