--- a/platformio.ini
+++ b/platformio.ini
@@ -42,6 +42,7 @@ build_flags =
   -D SDL_HOR_RES=480
   -D SDL_VER_RES=272  
   -D SDL_ZOOM=1
+  -I/opt/homebrew/opt/sdl2/include/
   -D SDL_INCLUDE_PATH="\"SDL2/SDL.h\""
 
   ; LVGL memory options, setup for the demo to run properly
