--- a/platformio.ini
+++ b/platformio.ini
@@ -1,15 +1,25 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
-
 [platformio]
-default_envs = emulator_64bits
+default_envs = demo_widgets
+
+[active]
+target = demo_widgets
+
+[custom]
+build_src_filter =
+  +<../lib/lvgl/demos>
+build_flags = 
+  -D LV_USE_DEMO_WIDGETS=1
+lib_deps =
+
+; [flowsensor]
+; lib_deps =
+;   lvgl=symlink://../../where/ever/lvgl
+; build_flags =
+;   -D WHATEVER_THE_CLIENT_CODE_NEEDS
+
+; demo widgets custom
+
+
 
 ; Shared options
 [env]
@@ -17,17 +27,22 @@ build_flags =
   ; Don't use lv_conf.h. Tweak params via platfom.ini.
   -D LV_CONF_SKIP
   -D LV_CONF_INCLUDE_SIMPLE
+  ${custom.build_flags}
   ; Enable LVGL demo, remove when working on your own project
-  -D LV_USE_DEMO_WIDGETS=1
+  ; -D LV_USE_DEMO_WIDGETS=1
+  ; -D LV_USE_DEMO_KEYPAD_AND_ENCODER=1
   ; Add more defines below to overide lvgl:/src/lv_conf_simple.h
 lib_deps =
-  ; Use direct URL, because package registry is unstable
-  ;lvgl@~7.11.0
-  lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.2.0.zip
+  ${custom.lib_deps}
+;   ; Use direct URL, because package registry is unstable
+;   ;lvgl@~7.11.0
+;   lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.2.0.zip
+  ; see https://docs.platformio.org/en/latest/projectconf/sections/env/options/library/lib_extra_dirs.html
+;   FooLib=symlink://../../shared-libraries/FooLib
 lib_archive = false
 
 
-[env:emulator_64bits]
+[emulator_64bits]
 platform = native@^1.1.3
 extra_scripts = support/sdl2_build_extra.py
 build_flags =
@@ -36,6 +51,7 @@ build_flags =
   -D LV_LOG_PRINTF=1
   ; Add recursive dirs for hal headers search
   !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
+  -L /opt/homebrew/opt/sdl2/lib
   -lSDL2
   ; SDL drivers options
   -D LV_LVGL_H_INCLUDE_SIMPLE
@@ -44,6 +60,7 @@ build_flags =
   -D SDL_HOR_RES=480
   -D SDL_VER_RES=320  
   -D SDL_ZOOM=1
+  -I /opt/homebrew/opt/sdl2/include
   -D SDL_INCLUDE_PATH="\"SDL2/SDL.h\""
 
   ; LVGL memory options, setup for the demo to run properly
@@ -54,41 +71,14 @@ lib_deps =
   ${env.lib_deps}
   ; Use direct URL, because package registry is unstable
   ;lv_drivers@~7.9.0
-  lv_drivers=https://github.com/lvgl/lv_drivers/archive/refs/tags/v8.2.0.zip
+  ; lv_drivers=https://github.com/lvgl/lv_drivers/archive/refs/tags/v8.2.0.zip
 build_src_filter =
   +<*>
   +<../hal/sdl2>
   ; Force compile LVGL demo, remove when working on your own project
-  +<../.pio/libdeps/emulator_64bits/lvgl/demos>
+  ;  +<../lib/lvgl/demos>
+  +<../lib/lvgl/demos>
 
-
-[env:emulator_32bits]
-extends = env:emulator_64bits
-build_flags =
-  ${env:emulator_64bits.build_flags}
-  -m32
-build_src_filter =
-  +<*>
-  +<../hal/sdl2>
-  +<../.pio/libdeps/emulator_32bits/lvgl/demos>
-
-[env:stm32f429_disco]
-platform = ststm32@^8.0.0
-board = disco_f429zi
-framework = stm32cube
-build_flags =
-  ${env.build_flags}
-  -D LV_LOG_LEVEL=LV_LOG_LEVEL_NONE
-  ; header's default is 25MHz, but board uses 8MHz crystal
-  -D HSE_VALUE=8000000
-  ; Add recursive dirs for hal headers search
-  !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/stm32f429_disco')]))"
-lib_deps =
-  ${env.lib_deps}
-  BSP-ili9341
-  BSP-stmpe811
-build_src_filter =
-  +<*>
-  +<../hal/stm32f429_disco>
-  ; Force compile LVGL demo, remove when working on your own project
-  +<../.pio/libdeps/stm32f429_disco/lvgl/demos>
+[env:demo_widgets]
+extends = env, demo_widgets, emulator_64bits
+targets = upload
