--- a/platformio.ini
+++ b/platformio.ini
@@ -4,21 +4,35 @@ default_envs = demo_widgets
 [active]
 target = demo_widgets
 
+; uncomment for demo widgets
+; [custom]
+; build_src_filter =
+;   +<../lib/lvgl/demos>
+; build_flags = 
+;   -D LV_USE_DEMO_WIDGETS=1
+
+; ; uncomment for keypad/encoder demo
+; [custom]
+; build_src_filter =
+;   +<../lib/lvgl/demos>
+; build_flags = 
+;   -D LV_USE_DEMO_KEYPAD_AND_ENCODER=1
+
+
+; uncomment for flowsensor UI
 [custom]
 build_src_filter =
-  +<../lib/lvgl/demos>
+   +<../../flowsensor/src/ui/screens/*.*>
+   +<../../flowsensor/src/ui/fonts/*.*>
+  +<../../flowsensor/src/ui/**.*>
+  +<../../flowsensor/simulator/**.*>
+
 build_flags = 
-  -D LV_USE_DEMO_WIDGETS=1
+  -I../flowsensor/src/ui
+  -I/Users/mah/Ballon/src/BalloonWare/flowsensor/simulator
+  -D INIT_FUNCTION=ui_init
+  -D INCLUDE_UI_H ; INCLUDE_1=\"ui/ui.h\"
 lib_deps =
-
-; [flowsensor]
-; lib_deps =
-;   lvgl=symlink://../../where/ever/lvgl
-; build_flags =
-;   -D WHATEVER_THE_CLIENT_CODE_NEEDS
-
-; demo widgets custom
-
 
 
 ; Shared options
@@ -47,6 +61,7 @@ platform = native@^1.1.3
 extra_scripts = support/sdl2_build_extra.py
 build_flags =
   ${env.build_flags}
+  ${custom.build_flags}
   ; -D LV_LOG_LEVEL=LV_LOG_LEVEL_INFO
   -D LV_LOG_PRINTF=1
   ; Add recursive dirs for hal headers search
@@ -77,8 +92,8 @@ build_src_filter =
   +<../hal/sdl2>
   ; Force compile LVGL demo, remove when working on your own project
   ;  +<../lib/lvgl/demos>
-  +<../lib/lvgl/demos>
+  ${custom.build_src_filter}
 
 [env:demo_widgets]
 extends = env, demo_widgets, emulator_64bits
-targets = upload
+targets = execute
