flowsensor is clean

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,16 +22,12 @@ target = demo_widgets
 ; uncomment for flowsensor UI
 [custom]
 build_src_filter =
-   +<../../flowsensor/src/ui/screens/*.*>
-   +<../../flowsensor/src/ui/fonts/*.*>
-  +<../../flowsensor/src/ui/**.*>
+  +<../../flowsensor/src/ui/**/*.*>
   +<../../flowsensor/simulator/**.*>
-
 build_flags = 
   -I../flowsensor/src/ui
-  -I/Users/mah/Ballon/src/BalloonWare/flowsensor/simulator
   -D INIT_FUNCTION=ui_init
-  -D INCLUDE_UI_H ; INCLUDE_1=\"ui/ui.h\"
+  -D INCLUDE_1=\"ui.h\"
 lib_deps =
 
 
