--- a/platformio.ini
+++ b/platformio.ini
@@ -1,35 +1,78 @@
 [platformio]
-default_envs = demo_widgets
+default_envs = custom
 
-[active]
-target = demo_widgets
+[layout]
+hres = 480
+vres = 320
+
+[m5core]
+hres = 320
+vres = 240
 
 ; uncomment for demo widgets
 ; [custom]
+; extends = layout
 ; build_src_filter =
 ;   +<../lib/lvgl/demos>
 ; build_flags = 
 ;   -D LV_USE_DEMO_WIDGETS=1
+;   -D INCLUDE_1=\"demos/lv_demos.h\"
+;   -D INIT_FUNCTION_1=lv_demo_widgets
+; lib_deps =
 
 ; ; uncomment for keypad/encoder demo
 ; [custom]
-; build_src_filter =
-;   +<../lib/lvgl/demos>
+; extends = layout
 ; build_flags = 
 ;   -D LV_USE_DEMO_KEYPAD_AND_ENCODER=1
+;   -D INIT_FUNCTION_1=lv_demo_keypad_encoder
+;   -D INCLUDE_1=\"demos/lv_demos.h\"
+; build_src_filter =
+;   +<../lib/lvgl/demos>
+; lib_deps =
 
+; ; uncomment for music demo
+; [custom]
+; extends = layout
+; hres = 480
+; vres = 272
+; build_flags = 
+;   -DLV_USE_DEMO_MUSIC=1
+;   -DLV_FONT_MONTSERRAT_12
+;   -DLV_FONT_MONTSERRAT_14  
+;   -DLV_FONT_MONTSERRAT_16
+;   -DLV_FONT_MONTSERRAT_32
+;   -DLV_FONT_MONTSERRAT_22
+;   -ULV_DEMO_MUSIC_LARGE
+;   -DINIT_FUNCTION_1=lv_demo_music
+;   -DINCLUDE_1=\"demos/lv_demos.h\"
+; build_src_filter =
+;   +<../lib/lvgl/demos/music/**/*.*>
+; lib_deps =
 
 ; uncomment for flowsensor UI
+; [custom]
+; extends = m5core
+; build_src_filter =
+;   +<../../flowsensor/src/ui/**/*.*>
+;   +<../../flowsensor/simulator/**.*>
+; build_flags = 
+;   -I../flowsensor/src/ui
+;   -D INIT_FUNCTION_1=ui_init
+;   -D INCLUDE_1=\"ui.h\"
+; lib_deps =
+
+; uncomment for esp32-imu-baro UI
 [custom]
+extends = m5core
 build_src_filter =
-  +<../../flowsensor/src/ui/**/*.*>
-  +<../../flowsensor/simulator/**.*>
+  +<../../esp32-imu-baro/src/ui/**/*.*>
+  +<../../esp32-imu-baro/simulator/**.*>
 build_flags = 
-  -I../flowsensor/src/ui
-  -D INIT_FUNCTION=ui_init
+  -I../esp32-imu-baro/src/ui
+  -D INIT_FUNCTION_1=ui_init
   -D INCLUDE_1=\"ui.h\"
 lib_deps =
-
 
 ; Shared options
 [env]
@@ -38,17 +81,8 @@ build_flags =
   -D LV_CONF_SKIP
   -D LV_CONF_INCLUDE_SIMPLE
   ${custom.build_flags}
-  ; Enable LVGL demo, remove when working on your own project
-  ; -D LV_USE_DEMO_WIDGETS=1
-  ; -D LV_USE_DEMO_KEYPAD_AND_ENCODER=1
-  ; Add more defines below to overide lvgl:/src/lv_conf_simple.h
 lib_deps =
   ${custom.lib_deps}
-;   ; Use direct URL, because package registry is unstable
-;   ;lvgl@~7.11.0
-;   lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.2.0.zip
-  ; see https://docs.platformio.org/en/latest/projectconf/sections/env/options/library/lib_extra_dirs.html
-;   FooLib=symlink://../../shared-libraries/FooLib
 lib_archive = false
 
 
@@ -68,8 +102,8 @@ build_flags =
   -D LV_LVGL_H_INCLUDE_SIMPLE
   -D LV_DRV_NO_CONF
   -D USE_SDL
-  -D SDL_HOR_RES=480
-  -D SDL_VER_RES=320  
+  -DSDL_HOR_RES=${custom.hres}
+  -DSDL_VER_RES=${custom.vres}
   -D SDL_ZOOM=1
   -I /opt/homebrew/opt/sdl2/include
   -D SDL_INCLUDE_PATH="\"SDL2/SDL.h\""
@@ -80,16 +114,12 @@ build_flags =
   
 lib_deps =
   ${env.lib_deps}
-  ; Use direct URL, because package registry is unstable
-  ;lv_drivers@~7.9.0
-  ; lv_drivers=https://github.com/lvgl/lv_drivers/archive/refs/tags/v8.2.0.zip
 build_src_filter =
   +<*>
   +<../hal/sdl2>
-  ; Force compile LVGL demo, remove when working on your own project
-  ;  +<../lib/lvgl/demos>
   ${custom.build_src_filter}
 
-[env:demo_widgets]
-extends = env, demo_widgets, emulator_64bits
+[env:custom]
+extends = custom, emulator_64bits
+; extends = env, demo_widgets, emulator_64bits
 targets = execute
